added tests refactor dbfs handler for #3 #11 #12

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>davstorage</name>
 	<comment></comment>
 	<projects>
+		<project>daventities</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
